--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;  
+  position: relative;
+}
+
+html, body, form {
+  height: 100vh;
+  max-height: 100%;
+  overflow: hidden;
+}
+
+section {
+  display: flex;
+}
+
+form {
+  width: 35%;
+  padding: 5vh;
+  display: flex;
+  flex-direction: column;
+}
+
+textarea {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 10px;
+}
+
+input {
+  display: inline-block;
+  padding: 5px;
+}
+
+#result {
+  font-family: Helvetica;
+  font-size: 1.1rem;
+  padding: 5vh;
+  flex: 1;
+  height: 100vh;
+  overflow: scroll;
+}
+
+
