--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
   <div id="result">
     <ng-container *ngFor="let line of lines">
-      {{line}} - {{line.length}} <br />
+      {{line}} <br />
     </ng-container>
   </div>  
 </section>
